--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Paquete para administrar roles y permisos",
     "type": "library",
     "require": {
-        "illuminate/support": "^7.0@dev",
+        "illuminate/support": "^6.0",
         "php": "^7.2"
     },
     "license": "MIT",
@@ -13,5 +13,13 @@
             "email": "tona.castelan16@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "autoload": {
+        "psr-4": {
+            "Tonacastelan\\Roles\\": "src"
+        }
+    },
+    "minimum-stability": "dev",
+    "require-dev": {
+        "phpunit/phpunit": "^8.0"
+    }
 }
