--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,5 @@
         }
     },
     "minimum-stability": "dev",
-    "require-dev": {
-        "phpunit/phpunit": "^8.0"
-    }
+    "prefer-stable": true
 }
