--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,12 @@
     "description": "Paquete para administrar roles y permisos",
     "type": "library",
     "require": {
-        "illuminate/support": "^6.0",
-        "php": "^7.2"
+        "php": "^7.1",
+        "illuminate/support": "5.8.*"
+    },
+    "require-dev": {
+        "orchestra/testbench": "3.8.*",
+        "phpunit/phpunit": "^7.0"
     },
     "license": "MIT",
     "authors": [
@@ -17,7 +21,5 @@
         "psr-4": {
             "Tonacastelan\\Roles\\": "src"
         }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
